[tool.poetry]
name = "mona"
version = "0.1.0"
description = "ASGI server with functional approach in mind"
authors = ["Katun Ilya <katun.ilya@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
orjson = "^3.6.7"
pydantic = "^1.9.0"
toolz = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.0.1"
asyncio = "^3.4.3"
pytest-asyncio = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
