[tool.poetry]
name = "mona"
version = "0.2.1"
description = "ASGI server with functional approach in mind"
authors = ["Katun Ilya <katun.ilya@gmail.com>"]
license = "MIT"
readme="README.md"
repository="https://github.com/katunilya/mona"
homepage="https://katunilya.github.io/mona/"
documentation="https://katunilya.github.io/mona/"
keywords=[
    "ASGI",
    "functional",
    "monad",
    "railroad",
    "framework"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.6.7"
pydantic = "^1.9.0"
toolz = "^0.11.2"
typing-extensions = "^4.1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.0.1"
asyncio = "^3.4.3"
pytest-asyncio = "^0.18.1"
flake8-bugbear = "^22.3.23"
flake8-comprehensions = "^3.8.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.0"
flake8-isort = "^4.1.1"
pep8-naming = "^0.12.1"
flake8-string-format = "^0.3.0"
flake8-bandit = "^3.0.0"
flake8-builtins = "^1.5.3"
flake8-black = "^0.3.2"
flake8-expression-complexity = "^0.0.11"
flake8-annotations-complexity = "^0.0.7"
flake8-requirements = "^1.5.3"
uvicorn = "^0.17.6"
handsdown = "^1.1.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
